# RustGraphQLTemplate

./: .env  Cargo.toml  README.md
api/: Cargo.toml
api/src/: app_state.rs  lib.rs
api/src/gql/: mod.rs  user.rs
api/src/routes/: gql.rs  mod.rs
schema/src/: user.rs
service/: Cargo.toml
