[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.9"
hyper = { version = "1.5.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"  # For environment variable support
tracing-subscriber = "0.3.19"
async-graphql = "7.0.13"
async-graphql-axum = "7.0.13"
## Internal dependencies
service = { path = "../service" }
migration = { path = "../migration" }
entity = { path = "../entity" }
schema = { path = "../schema" }
anyhow = "1.0.94"
tracing = "0.1.41"
