[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { features = [
    "sqlx-postgres",
    "debug-print",
    "runtime-tokio-native-tls",
], version = "1.1.2" }
entity = { path = "../entity" }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt"] }
